--- a/package.json
+++ b/package.json
@@ -16,17 +16,24 @@
     "@types/cors": "^2.8.18",
     "@types/winston": "^2.4.4",
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-status-monitor": "^1.3.4",
     "helmet": "^8.1.0",
+    "http-status-codes": "^2.3.0",
     "mysql2": "^3.14.1",
     "typeorm": "^0.3.24",
     "winston": "^3.17.0",
+    "xss": "^1.0.15",
     "zod": "^3.25.48"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.2",
+    "@types/express-status-monitor": "^1.3.3",
     "@types/node": "^20.17.57",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
