--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": "./src/",
     "paths": {
+      "@config": ["config/index.ts"],
       "@config/*": ["config/*"],
       "@constants/*": ["constants/*"],
       "@database/*": ["database/*"],
