feat: Refactor project structure and enhance logging
- Updated package.json to include linting and prettier scripts.
- Refactored app.ts to improve middleware organization and error handling.
- Enhanced environment variable validation in env.ts.
- Modified datasource.ts to disable logging in production.
- Improved database initialization error handling in index.ts.
- Updated index.ts to implement structured logging and graceful shutdown.
- Removed unused auth middleware.
- Enhanced error handling middleware to provide structured responses.
- Improved rate limiter middleware with logging for exceeded limits.
- Added request logger middleware for better request tracking.
- Updated XSS sanitizer middleware for improved type safety.
- Added utility functions for context management and error handling.
- Enhanced logger utility to support structured logging and database transport.
- Updated TypeScript configuration for improved module resolution.
- Added ESLint and Prettier configuration for code quality enforcement.
- Introduced context management for request lifecycle.
- Added response utility for consistent API responses.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,14 +10,15 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "src",
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "useUnknownInCatchVariables": true,
     "noUncheckedIndexedAccess": true,
-    "baseUrl": "./src/",
+    "baseUrl": "src",
     "paths": {
+      "@common/*": ["common/*"],
       "@config": ["config/index.ts"],
       "@config/*": ["config/*"],
       "@constants/*": ["constants/*"],
@@ -26,7 +27,8 @@
       "@modules/*": ["modules/*"],
       "@providers/*": ["providers/*"],
       "@router/*": ["router/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@src/*": ["*"]
     }
   },
   "include": ["src/**/*.ts"],
