--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "description": "Simple api sample in Node",
   "version": "1.0.0",
   "private": true,
-  "main": "srs/index.ts",
+  "module": "NodeNext",
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register --exec ts-node src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
-  "author": "Google LLC",
-  "license": "Apache-2.0",
   "dependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/cors": "^2.8.18",
-    "@types/winston": "^2.4.4",
-    "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -23,8 +19,6 @@
     "express-rate-limit": "^7.5.0",
     "express-status-monitor": "^1.3.4",
     "helmet": "^8.1.0",
-    "http-status-codes": "^2.3.0",
-    "mysql2": "^3.14.1",
     "typeorm": "^0.3.24",
     "winston": "^3.17.0",
     "xss": "^1.0.15",
@@ -32,10 +26,18 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/express-status-monitor": "^1.3.3",
     "@types/node": "^20.17.57",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "nodemon": "^3.1.10",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
